Fix incoorect display on mobile devices - button is too large for small sctreen: https://i.imgur.com/2uZB85E.png

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -278,6 +278,9 @@ fieldset[disabled] .btn-xl.active {
     color: #21c7da;
     background-color: white;
 }
+.btn.twf {
+    white-space: normal;
+}
 .navbar-custom {
     background-color: #222222;
     border-color: transparent;
